--- a/views/components/content.hbs
+++ b/views/components/content.hbs
@@ -1,6 +1,30 @@
-      <!-- This example requires Tailwind CSS v2.0+ -->
-      <div class="overflow-y-auto h-3/5 flex flex-1 flex-col mx-2 my-0 mt-4 relative">
-        <div class="my-2 overflow-y-scroll overflow-x-hidden sm:mx-4 lg:mx-0">
-{{!-- aqui va el contenido del post --}}
+  <!-- This example requires Tailwind CSS v2.0+ -->
+<div class="h-3/5 flex flex-1 flex-col mx-2 my-0 mt-4 relative">
+  <div class="my-2 sm:mx-4 lg:mx-0">
+        {{!-- aqui va el contenido del post --}}
+    <div>
+      <div class="md:grid md:grid-cols-3 md:gap-6 md:m-auto">
+        <div class="mt-5 md:mt-0 md:col-span-3">
+          <form action="#" method="POST">
+            <div class="shadow sm:rounded-md sm:overflow-hidden">
+              <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
+
+                <div>
+                  <label for="about" class="block text-sm font-medium text-gray-700"> Add your comment </label>
+                  <div class="mt-1">
+                    <textarea id="about" name="about" rows="3" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md" placeholder="Brief description for your profile. URLs are hyperlinked."></textarea>
+                  </div>
+                </div>
+
+              </div>
+              <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
+                <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Post</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
+    </div>
+
+  </div>
+</div>
